fixed blog spacing footer phone number

--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,7 @@ hr.lineColor {
 
 .footerFontSize {
 	font-size: 13px;
+	display: inline-block;
 }
 
 .copyrightCenter {
